--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
     "name": "personal",
-    "version": "0.0.0",
-    "type": "module",
+    "version": "0.1.0",
     "scripts": {
-        "dev": "vite --port 4000",
-        "build": "tsc -b && vite build",
-        "preview": "vite preview"
+        "dev": "next dev --port 4000",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-        "solid-js": "^1.8.19"
+        "next": "^14.2.5",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     },
     "devDependencies": {
-        "@nomemo/nice-import-sorting": "0.1.4",
-        "@solidjs/meta": "^0.29.4",
-        "@solidjs/router": "^0.14.2",
-        "@types/node": "^22.2.0",
+        "@nomemo/nice-import-sorting": "^0.1.4",
+        "@types/node": "^22.3.0",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "eslint": "^8.57.0",
+        "eslint-config-next": "^14.2.5",
         "prettier": "^3.3.3",
-        "typescript": "^5.5.3",
-        "vite": "^5.4.0",
-        "vite-plugin-solid": "^2.10.2"
+        "typescript": "^5.5.4"
     },
     "private": true
 }
